# universal-launcher-backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_project.yml  code-format.yml  rust-clippy.yml
migrations/2022-01-28-153105_create_modpacks/: down.sql  up.sql
migrations/2022-02-01-075456_create_modpacks_versions/: down.sql  up.sql
migrations/2022-02-22-092229_create_user/: up.sql
src/: api_calls.rs  main.rs  router.rs
src/actions/: mod.rs  modpacks.rs  users.rs
src/database/: database.rs  db.rs  models.rs  schema.rs
src/database/models/: mod.rs  modpack_version.rs  modpacks.rs  user.rs
src/handlers/: auth.rs  base.rs  mod.rs  modpacks.rs  user.rs
src/router/: auth.rs  base.rs  modpack_versions.rs  modpacks.rs  user.rs
src/utils/: errors.rs  hash.rs  mod.rs
