[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "3"
env_logger = "0.9"
serde = "1"
serde_with = "1"
reqwest = { version ="0.11", features = ["json"] }
