[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.21"
actix-rt= "2"
env_logger = "0.9"
serde = "1"
serde_with = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

diesel = { version = "1", features = ["postgres", "sqlite", "r2d2", "chrono", "numeric"] }
chrono = { version = "0", default-features = false, features = ["clock", "std", "serde"] }
url = "2"
