[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "4.0.1"
actix-rt= "2.6.0"
actix-cors = "0.6.0"
env_logger = "0.9.0"
serde = "1.0.136"
serde_with = "1.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }

diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "numeric"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std", "serde"] }
url = "2.2.2"
argon2 = "0.3.4"
rand_core = { version = "0.6.3", features = ["std"] }
validator = { version = "0.14.0", features = ["derive"] }
actix-web-4-validator = {version = "3.2.0", git = "https://github.com/Bricklou/actix-web-4-validator" }
